ncc/testsuite/positive/polymorphic-recursion-2.n
using System;
using System.Console;

module Program
{
  foo[T] (v : int, x : T) : T
  {
    if (v < 0) x
    else {
      def (x, _) = foo(v - 1, (x, x));
      x
    }
  }
  
  Main () : void
  {
    WriteLine(foo(5, "OK"));
  }
}

/*
BEGIN-OUTPUT
OK
END-OUTPUT
*/
