ncc/testsuite/negative/block1.n
using Nemerle.Block;
module M {
  foo () : int
  {
    block (ret) {
      try {
        ret (42); // E: not allowed inside expressions
      } finally {}
    }
  }
  

  foo2 () : int
  {
    block (ret) {
      _ = (ret (42), 1); // E: not allowed inside expressions
      42
    }
  }


  bar4 () : int
  {
    block (brk) { 
      when (3 < 4)
        brk (42);
      when (3 < 5)
        brk ("foo"); // E: in argument #1, needed a int.*, got string
      "foo"
    }
  }


  Main () : void
  {
  }
  
}
